# MephiApp

./: .env  .gitignore  Dockerfile  README.md  a.py  docker-compose.yml  entrypoint.sh  nginx.conf  prometheus.yml  pyproject.toml  requirements.txt  run.sh  run_bulk_insert.sh  run_bulk_insert_news.sh  run_bulk_insert_schedule.sh  run_parsing.sh  run_parsing_date.sh  run_parsing_new_news.sh  run_parsing_news.sh  run_parsing_schedule.sh  runserver.py  traefik.dev.toml  traefik.yaml
FastAPI_SQLAlchemy/: Dockerfile  README.md  config.py  main.py  requirements
FastAPI_SQLAlchemy/_fastapi_/: crud.py  response_detail.py  tools.py
FastAPI_SQLAlchemy/logs/: log1
FastAPI_SQLAlchemy/parsing/: README.md  config.py  input_parse_info.py  news_parser.py  news_parser_filebuffer.py  schedule_parser.py
FastAPI_SQLAlchemy/translator/: translator.py
alembic/: env.py
backend/: Dockerfile  alembic.ini  entrypoint.sh  main.py  runserver.py
backend/Config/: config.py
backend/DataBase/: connection.py
backend/Filters/: Room.py
backend/Repositories/: Academic.py  Corps.py  Group.py  Language.py  Lesson.py  LessonTranslate.py  Room.py  Teacher.py  TeacherTranslate.py
backend/Routers/: Group.py  Lesson.py  Room.py  Teacher.py
backend/Schemas/: Academic.py  Corps.py  Group.py  Language.py  Lesson.py  LessonTranslate.py  Room.py  Teacher.py  TeacherTranslate.py
backend/Services/: Academic.py  Corps.py  Group.py  Language.py  Lesson.py  Room.py  Teacher.py
backend/alembic/: env.py
backend/api/: main.py
backend/config/: config.py
backend/database/: connection.py
backend/filters/: room.py
backend/repositories/: academic.py  corps.py  group.py  lesson.py  lesson_translate.py  news.py  preview.py  room.py  start_semester.py  teacher.py  teacher_translate.py
backend/routers/: academic.py  corps.py  group.py  lesson.py  news.py  preview.py  room.py  teacher.py
backend/schemas/: academic.py  corps.py  group.py  lesson.py  lesson_translate.py  lesson_without_language.py  news.py  (+6 more)
celery_conf/: Dockerfile  __init__.py  beat.py  beat_tasks.py  install_lang_packages.py  run_celery.sh  yandex_auth.sh
celery_parsing/: __init__.py  config.py  connection.py  run.py  set_info.py  worker.py
celery_worker/: Dockerfile  __init__.py  tasks.py  worker.py
config/: config.py
etl/: __init__.py  celery_tasks.py  etl_.py
logging_/: __init__.py  logger.py
parsing/: WrapLessonModel.py  __init__.py  bulk_insert.py  config.py  pool.py  requirements  run.py  run.sh  run_bulk_insert.py  run_parsing.py  set_info.py  task.py  translate_schedule.py  translate_teachers.py
tests/: .env  conftest.py  test_lesson_router.py  tox.ini
utils/: redirect.py  version.py
(+194 files in other folders)
